generated/generated_cloudformation_template.json
{
    "Description": "Sync Gateway + Sync Gateway Accelerator + Couchbase Server",
    "Parameters": {
        "AvailabilityZone": {
            "Default": "us-east-1a",
            "Description": "The availability zone param.  Workaround for http://stackoverflow.com/questions/41903166/create-failed-elasticloadbalancerthe-requested-availability-zone-us-east-1c-is",
            "Type": "AWS::EC2::AvailabilityZone::Name"
        },
        "CouchbaseServerAdminPassword": {
            "Description": "The Couchbase Server Admin password",
            "MinLength": 8,
            "NoEcho": true,
            "Type": "String"
        },
        "CouchbaseServerAdminUser": {
            "Default": "Administrator",
            "Description": "The Couchbase Server Admin username",
            "Type": "String"
        },
        "CouchbaseServerInstanceType": {
            "Default": "m3.medium",
            "Description": "The InstanceType to use for Couchbase Server instance",
            "Type": "String"
        },
        "KeyName": {
            "Description": "Name of an existing EC2 KeyPair to enable SSH access",
            "MinLength": 1,
            "Type": "String"
        },
        "SgAccelConfigUrl": {
            "Default": "http://cbmobile-aws.s3.amazonaws.com/cloudformation-sync-gateway-config/SyncGateway1.4.0/sg_accel.json.template",
            "Description": "URL which contains Sync Gateway Accelerator configuration template",
            "Type": "String"
        },
        "SgAccelInstanceType": {
            "Default": "m3.medium",
            "Description": "The InstanceType to use for Sync Gateway Accel instance",
            "Type": "String"
        },
        "SyncGatewayConfigUrl": {
            "Default": "http://cbmobile-aws.s3.amazonaws.com/cloudformation-sync-gateway-config/SyncGateway1.4.0/sync_gateway.json.template",
            "Description": "URL which contains Sync Gateway configuration template",
            "Type": "String"
        },
        "SyncGatewayInstanceType": {
            "Default": "m3.medium",
            "Description": "The InstanceType to use for Sync Gateway instance",
            "Type": "String"
        }
    },
    "Resources": {
        "CBServerAutoScalingGroup": {
            "Properties": {
                "AvailabilityZones": [
                    {
                        "Ref": "AvailabilityZone"
                    }
                ],
                "DesiredCapacity": 1,
                "LaunchConfigurationName": {
                    "Ref": "CBServerLaunchConfiguration"
                },
                "MaxSize": 100,
                "MinSize": 0,
                "Tags": [
                    {
                        "Key": "Type",
                        "PropagateAtLaunch": true,
                        "Value": "couchbaseserver"
                    },
                    {
                        "Key": "Name",
                        "PropagateAtLaunch": true,
                        "Value": "couchbaseserver_autoscale_instance"
                    }
                ]
            },
            "Type": "AWS::AutoScaling::AutoScalingGroup"
        },
        "CBServerLaunchConfiguration": {
            "Properties": {
                "BlockDeviceMappings": [
                    {
                        "DeviceName": "/dev/xvda",
                        "Ebs": {
                            "DeleteOnTermination": "true",
                            "VolumeSize": 200,
                            "VolumeType": "gp2"
                        }
                    }
                ],
                "ImageId": "ami-2eeb4538",
                "InstanceType": {
                    "Ref": "CouchbaseServerInstanceType"
                },
                "KeyName": {
                    "Ref": "KeyName"
                },
                "SecurityGroups": [
                    {
                        "Ref": "CouchbaseSecurityGroup"
                    }
                ],
                "UserData": {
                    "Fn::Base64": {
                        "Fn::Join": [
                            "",
                            [
                                "#!/bin/bash\n",
                                "ethtool -K eth0 sg off\ncd /home/ec2-user/sync-gateway-ami\n",
                                "pwd\n",
                                "source setup.sh\n",
                                "sleep 30\n",
                                "export public_dns_name=$(curl http://169.254.169.254/latest/meta-data/public-hostname)\n",
                                "python src/cbbootstrap.py --cluster-id ",
                                {
                                    "Ref": "AWS::StackId"
                                },
                                " --node-ip-addr-or-hostname ${public_dns_name} --admin-user ",
                                {
                                    "Ref": "CouchbaseServerAdminUser"
                                },
                                " --admin-pass ",
                                {
                                    "Ref": "CouchbaseServerAdminPassword"
                                },
                                "\n"
                            ]
                        ]
                    }
                }
            },
            "Type": "AWS::AutoScaling::LaunchConfiguration"
        },
        "CouchbaseSecurityGroup": {
            "Properties": {
                "GroupDescription": "External Access to Sync Gateway user port"
            },
            "Type": "AWS::EC2::SecurityGroup"
        },
        "IngressCouchbaseAPI": {
            "Properties": {
                "FromPort": "8092",
                "GroupName": {
                    "Ref": "CouchbaseSecurityGroup"
                },
                "IpProtocol": "tcp",
                "SourceSecurityGroupId": {
                    "Fn::GetAtt": [
                        "CouchbaseSecurityGroup",
                        "GroupId"
                    ]
                },
                "ToPort": "8092"
            },
            "Type": "AWS::EC2::SecurityGroupIngress"
        },
        "IngressCouchbaseClientInterfaceProxy": {
            "Properties": {
                "FromPort": "11211",
                "GroupName": {
                    "Ref": "CouchbaseSecurityGroup"
                },
                "IpProtocol": "tcp",
                "SourceSecurityGroupId": {
                    "Fn::GetAtt": [
                        "CouchbaseSecurityGroup",
                        "GroupId"
                    ]
                },
                "ToPort": "11211"
            },
            "Type": "AWS::EC2::SecurityGroupIngress"
        },
        "IngressCouchbaseErlangPortMapper": {
            "Properties": {
                "FromPort": "4369",
                "GroupName": {
                    "Ref": "CouchbaseSecurityGroup"
                },
                "IpProtocol": "tcp",
                "SourceSecurityGroupId": {
                    "Fn::GetAtt": [
                        "CouchbaseSecurityGroup",
                        "GroupId"
                    ]
                },
                "ToPort": "4369"
            },
            "Type": "AWS::EC2::SecurityGroupIngress"
        },
        "IngressCouchbaseInternalBucketPort": {
            "Properties": {
                "FromPort": "11209",
                "GroupName": {
                    "Ref": "CouchbaseSecurityGroup"
                },
                "IpProtocol": "tcp",
                "SourceSecurityGroupId": {
                    "Fn::GetAtt": [
                        "CouchbaseSecurityGroup",
                        "GroupId"
                    ]
                },
                "ToPort": "11209"
            },
            "Type": "AWS::EC2::SecurityGroupIngress"
        },
        "IngressCouchbaseInternalExternalBucketPort": {
            "Properties": {
                "FromPort": "11210",
                "GroupName": {
                    "Ref": "CouchbaseSecurityGroup"
                },
                "IpProtocol": "tcp",
                "SourceSecurityGroupId": {
                    "Fn::GetAtt": [
                        "CouchbaseSecurityGroup",
                        "GroupId"
                    ]
                },
                "ToPort": "11210"
            },
            "Type": "AWS::EC2::SecurityGroupIngress"
        },
        "IngressCouchbaseNodeDataExchange": {
            "Properties": {
                "FromPort": "21100",
                "GroupName": {
                    "Ref": "CouchbaseSecurityGroup"
                },
                "IpProtocol": "tcp",
                "SourceSecurityGroupId": {
                    "Fn::GetAtt": [
                        "CouchbaseSecurityGroup",
                        "GroupId"
                    ]
                },
                "ToPort": "21299"
            },
            "Type": "AWS::EC2::SecurityGroupIngress"
        },
        "IngressCouchbaseWebAdmin": {
            "Properties": {
                "FromPort": "8091",
                "GroupName": {
                    "Ref": "CouchbaseSecurityGroup"
                },
                "IpProtocol": "tcp",
                "SourceSecurityGroupId": {
                    "Fn::GetAtt": [
                        "CouchbaseSecurityGroup",
                        "GroupId"
                    ]
                },
                "ToPort": "8091"
            },
            "Type": "AWS::EC2::SecurityGroupIngress"
        },
        "IngressSSH": {
            "Properties": {
                "CidrIp": "0.0.0.0/0",
                "FromPort": "22",
                "GroupName": {
                    "Ref": "CouchbaseSecurityGroup"
                },
                "IpProtocol": "tcp",
                "ToPort": "22"
            },
            "Type": "AWS::EC2::SecurityGroupIngress"
        },
        "IngressSyncGatewayAdmin": {
            "Properties": {
                "FromPort": "4985",
                "GroupName": {
                    "Ref": "CouchbaseSecurityGroup"
                },
                "IpProtocol": "tcp",
                "SourceSecurityGroupId": {
                    "Fn::GetAtt": [
                        "CouchbaseSecurityGroup",
                        "GroupId"
                    ]
                },
                "ToPort": "4985"
            },
            "Type": "AWS::EC2::SecurityGroupIngress"
        },
        "IngressSyncGatewayUser": {
            "Properties": {
                "CidrIp": "0.0.0.0/0",
                "FromPort": "4984",
                "GroupName": {
                    "Ref": "CouchbaseSecurityGroup"
                },
                "IpProtocol": "tcp",
                "ToPort": "4984"
            },
            "Type": "AWS::EC2::SecurityGroupIngress"
        },
        "SGAccelAutoScalingGroup": {
            "Properties": {
                "AvailabilityZones": [
                    {
                        "Ref": "AvailabilityZone"
                    }
                ],
                "DesiredCapacity": 1,
                "LaunchConfigurationName": {
                    "Ref": "SGAccelLaunchConfiguration"
                },
                "MaxSize": 100,
                "MinSize": 0,
                "Tags": [
                    {
                        "Key": "Type",
                        "PropagateAtLaunch": true,
                        "Value": "sgaccel"
                    },
                    {
                        "Key": "Name",
                        "PropagateAtLaunch": true,
                        "Value": "sgaccel_autoscale_instance"
                    }
                ]
            },
            "Type": "AWS::AutoScaling::AutoScalingGroup"
        },
        "SGAccelLaunchConfiguration": {
            "Properties": {
                "BlockDeviceMappings": [
                    {
                        "DeviceName": "/dev/xvda",
                        "Ebs": {
                            "DeleteOnTermination": "true",
                            "VolumeSize": 25,
                            "VolumeType": "gp2"
                        }
                    }
                ],
                "ImageId": "ami-dc69c7ca",
                "InstanceType": {
                    "Ref": "SgAccelInstanceType"
                },
                "KeyName": {
                    "Ref": "KeyName"
                },
                "SecurityGroups": [
                    {
                        "Ref": "CouchbaseSecurityGroup"
                    }
                ],
                "UserData": {
                    "Fn::Base64": {
                        "Fn::Join": [
                            "",
                            [
                                "#!/bin/bash\n",
                                "ethtool -K eth0 sg off\ncd /home/ec2-user/sync-gateway-ami\n",
                                "pwd\n",
                                "source setup.sh\n",
                                "python src/sg_autoscale_launch.py --stack-name ",
                                {
                                    "Ref": "AWS::StackId"
                                },
                                " --config-url ",
                                {
                                    "Ref": "SgAccelConfigUrl"
                                },
                                " --server-type sg-accel\n"
                            ]
                        ]
                    }
                }
            },
            "Type": "AWS::AutoScaling::LaunchConfiguration"
        },
        "SGAutoScaleLoadBalancer": {
            "Properties": {
                "AvailabilityZones": [
                    {
                        "Ref": "AvailabilityZone"
                    }
                ],
                "ConnectionDrainingPolicy": {
                    "Enabled": true,
                    "Timeout": 120
                },
                "ConnectionSettings": {
                    "IdleTimeout": 3600
                },
                "CrossZone": "true",
                "HealthCheck": {
                    "HealthyThreshold": "2",
                    "Interval": "5",
                    "Target": "HTTP:4984/",
                    "Timeout": "3",
                    "UnhealthyThreshold": "2"
                },
                "Listeners": [
                    {
                        "InstancePort": "4984",
                        "InstanceProtocol": "HTTP",
                        "LoadBalancerPort": "4984",
                        "Protocol": "HTTP"
                    },
                    {
                        "InstancePort": "4985",
                        "InstanceProtocol": "HTTP",
                        "LoadBalancerPort": "4985",
                        "Protocol": "HTTP"
                    }
                ],
                "LoadBalancerName": {
                    "Fn::Join": [
                        "",
                        [
                            "SGAS-",
                            {
                                "Ref": "AWS::StackName"
                            }
                        ]
                    ]
                },
                "Scheme": "internet-facing"
            },
            "Type": "AWS::ElasticLoadBalancing::LoadBalancer"
        },
        "SGAutoScalingGroup": {
            "Properties": {
                "AvailabilityZones": [
                    {
                        "Ref": "AvailabilityZone"
                    }
                ],
                "DesiredCapacity": 1,
                "LaunchConfigurationName": {
                    "Ref": "SGLaunchConfiguration"
                },
                "LoadBalancerNames": [
                    {
                        "Ref": "SGAutoScaleLoadBalancer"
                    }
                ],
                "MaxSize": 100,
                "MinSize": 0,
                "Tags": [
                    {
                        "Key": "Type",
                        "PropagateAtLaunch": true,
                        "Value": "syncgateway"
                    },
                    {
                        "Key": "Name",
                        "PropagateAtLaunch": true,
                        "Value": "syncgateway_autoscale_instance"
                    }
                ]
            },
            "Type": "AWS::AutoScaling::AutoScalingGroup"
        },
        "SGLaunchConfiguration": {
            "Properties": {
                "BlockDeviceMappings": [
                    {
                        "DeviceName": "/dev/xvda",
                        "Ebs": {
                            "DeleteOnTermination": "true",
                            "VolumeSize": 25,
                            "VolumeType": "gp2"
                        }
                    }
                ],
                "ImageId": "ami-b76bc5a1",
                "InstanceType": {
                    "Ref": "SyncGatewayInstanceType"
                },
                "KeyName": {
                    "Ref": "KeyName"
                },
                "SecurityGroups": [
                    {
                        "Ref": "CouchbaseSecurityGroup"
                    }
                ],
                "UserData": {
                    "Fn::Base64": {
                        "Fn::Join": [
                            "",
                            [
                                "#!/bin/bash\n",
                                "ethtool -K eth0 sg off\ncd /home/ec2-user/sync-gateway-ami\n",
                                "pwd\n",
                                "source setup.sh\n",
                                "python src/sg_autoscale_launch.py --stack-name ",
                                {
                                    "Ref": "AWS::StackId"
                                },
                                " --config-url ",
                                {
                                    "Ref": "SyncGatewayConfigUrl"
                                },
                                " --server-type sg\n"
                            ]
                        ]
                    }
                }
            },
            "Type": "AWS::AutoScaling::LaunchConfiguration"
        }
    }
}
